// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Place Snapshot capturing Snapshot of Place with fastfood icon 1`] = `
<li
  className="list-group-item"
>
  <p
    className="my-1"
  >
    <i
      className="material-icons md-24 md-dark "
      icon="fastfood"
      style={
        Object {
          "color": "",
          "fontSize": "md-24",
        }
      }
    />
    
    Cafétéria Universitaire Le Veracruz
    <span
      className="align-top"
    >
      <button
        aria-label={null}
        className="float-right btn btn-danger btn-sm"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </span>
  </p>
</li>
`;

exports[`Place Snapshot capturing Snapshot of Place with restaurant icon 1`] = `
<li
  className="list-group-item"
>
  <p
    className="my-1"
  >
    <i
      className="material-icons md-24 md-dark "
      icon="restaurant"
      style={
        Object {
          "color": "",
          "fontSize": "md-24",
        }
      }
    />
    
    Cafétéria Universitaire Le Veracruz
    <span
      className="align-top"
    >
      <button
        aria-label={null}
        className="float-right btn btn-danger btn-sm"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </span>
  </p>
</li>
`;
